--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,9 @@ services:
     image: telegraf
     container_name: telegraf
     restart: always
-    depends_on:
-      - influxdb
     volumes:
-      - ./telegraf/config:/etc/telegraf:ro
+      #- ./telegraf/config:/etc/telegraf:ro
+      - ./telegraf/config/telegraf.conf:/etc/telegraf/telegraf.conf:ro
       - ./telegraf/mibs:/usr/share/snmp/mibs:ro
     environment:
       - INFLUXDB_URL=http://influxdb:8086
@@ -19,9 +18,9 @@ services:
     container_name: influxdb
     restart: always
     environment: 
-      - INFLUXDB_DB=telegraf
+      - INFLUXDB_DB=influxdb
       - INFLUXDB_ADMIN_USER=admin
-      - INFLUXDB_ADMIN_PASSWORD=admin
+      - INFLUXDB_ADMIN_PASSWORD=PaloAlto1
     ports:
       - "8083:8083"
       - "8086:8086"
@@ -32,9 +31,11 @@ services:
     image: grafana/grafana
     container_name: grafana
     restart: always
+    depends_on:
+      - influxdb
     environment: 
       - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=PaloAlto1
       - GF_INSTALL_PLUGINS=
     ports:
       - "3000:3000"
@@ -44,6 +45,5 @@ services:
       - ./grafana/dashboards:/var/lib/grafana/dashboards/
 
 volumes:
-  grafana_vol:
-  influxdb_vol:
-
+  grafana_vol: {}
+  influxdb_vol: {}
