--- a/grafana/provisioning/dashboards/all.yml
+++ b/grafana/provisioning/dashboards/all.yml
@@ -5,6 +5,6 @@ providers:
   folder: 'Network'
   type: file
   disableDeletion: false
-  updateIntervalSeconds: 3 #how often Grafana will scan for changed dashboards
+  updateIntervalSeconds: 3 
   options:
     path: /var/lib/grafana/dashboards
